src/lexer/snapshots/python_parser__lexer__tests__lex_comment_until_unix_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "123" Number(Decimal) 0..3,
    "# Foo" Comment 5..10,
    "\n" NewLine 10..11,
    "456" Number(Decimal) 11..14,
    "" NewLine 14..14,
]
