src/lexer/snapshots/python_parser__lexer__tests__lex_comment_until_windows_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "123" Number(Decimal) 0..3,
    "# Foo" Comment 5..10,
    "\r\n" NewLine 10..12,
    "456" Number(Decimal) 12..15,
    "" NewLine 15..15,
]
