src/lexer/snapshots/python_parser__lexer__tests__lex_double_dedent_tabs_windows_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "def" Keyword(Def) 0..3,
    "foo" Id 4..7,
    "(" OpenParenthesis 7..8,
    ")" CloseParenthesis 8..9,
    ":" Colon 9..10,
    "\r\n" NewLine 10..12,
    "\t" Indent 12..13,
    "if" Keyword(If) 13..15,
    "x" Id 16..17,
    ":" Colon 17..18,
    "\r\n" NewLine 18..20,
    "\r\n" NonLogicalNewline 20..22,
    "\t " Indent 22..24,
    "return" Keyword(Return) 24..30,
    "99" Number(Decimal) 31..33,
    "\r\n" NewLine 33..35,
    "\r\n" NonLogicalNewline 35..37,
    "" Dedent 37..37,
    "" Dedent 37..37,
]
