src/lexer/snapshots/python_parser__lexer__tests__lex_double_dedent_unix_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "def" Keyword(Def) 0..3,
    "foo" Id 4..7,
    "(" OpenParenthesis 7..8,
    ")" CloseParenthesis 8..9,
    ":" Colon 9..10,
    "\n" NewLine 10..11,
    " " Indent 11..12,
    "if" Keyword(If) 12..14,
    "x" Id 15..16,
    ":" Colon 16..17,
    "\n" NewLine 17..18,
    "\n" NonLogicalNewline 18..19,
    "  " Indent 19..21,
    "return" Keyword(Return) 21..27,
    "99" Number(Decimal) 28..30,
    "\n" NewLine 30..31,
    "\n" NonLogicalNewline 31..32,
    "" Dedent 32..32,
    "" Dedent 32..32,
]
